# off-quant

./: .gitignore  .tiltignore  CHANGELOG.md  Caddyfile  Cargo.toml  Dockerfile.aider  QUANT.md  README.md  Tiltfile  com.ollama.server.plist  docker-compose.proxy.yml  docker-compose.yml  justfile  llm.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
assets/: OllamaBar.icns
crates/llm-core/: Cargo.toml
crates/llm-core/src/: config.rs  lib.rs  ollama.rs  process.rs  tailscale.rs
crates/off-quant-cli/: Cargo.toml
crates/off-quant-cli/src/: main.rs
crates/ollama-bar/: Cargo.toml
crates/ollama-bar/assets/: Info.plist  entitlements.plist
crates/ollama-bar/src/: actions.rs  app.rs  dialogs.rs  main.rs  menu.rs  notifications.rs  state.rs  tray.rs
crates/quant-cli/: Cargo.toml
crates/quant-cli/src/: commands.rs  config.rs  context.rs  conversation.rs  main.rs  progress.rs  project.rs  repl.rs  session.rs
crates/quant-cli/src/agent/: agent_loop.rs  mod.rs  state.rs
crates/quant-cli/src/context/: embeddings.rs  index.rs  manager.rs  mod.rs  smart.rs  tokenizer.rs
crates/quant-cli/src/hooks/: mod.rs
crates/quant-cli/src/mcp/: client.rs  config.rs  lifecycle.rs  mod.rs  tools.rs  transport.rs  watcher.rs
crates/quant-cli/src/tools/: mod.rs  registry.rs  router.rs  security.rs
crates/quant-cli/src/tools/builtin/: bash.rs  file_read.rs  file_write.rs  git.rs  glob.rs  grep.rs  mod.rs  multi_edit.rs  sandbox.rs  web_fetch.rs  web_search.rs
docs/: MODEL_COMPATIBILITY.md  PRD-OllamaBar.md
modelfiles/: deepseek-coder-6.7b-instruct-q4km  glm-4-9b-chat-q4k  qwen2.5-coder-7b-instruct-q4km  starcoder2-7b-q4km
scripts/: bundle-app.sh  create-icon.sh  install.sh  llm_ctl.py  ollama_import.py  ollama_pull.py  select_model.py  wait_models.py
src/: commands.rs  main.rs
