[package]
name = "llm-core"
version.workspace = true
edition.workspace = true
description = "Shared library for local LLM management"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
libc.workspace = true

# Streaming support
futures = "0.3"
async-stream = "0.3"
bytes = "1"
