[package]
name = "ollama-bar"
version.workspace = true
edition.workspace = true
description = "macOS menu bar app for local LLM management"

[[bin]]
name = "ollama-bar"
path = "src/main.rs"

[dependencies]
llm-core = { path = "../llm-core" }
anyhow.workspace = true
dirs = "5"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# macOS AppKit bindings
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
block2.workspace = true

# Cross-platform tray icon (works reliably on macOS)
tray-icon = "0.21"
muda = "0.17"  # Menu library used with tray-icon (must match tray-icon's dep)

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific if needed

[package.metadata.bundle]
name = "OllamaBar"
identifier = "com.offquant.ollamabar"
icon = ["assets/icon.icns"]
category = "Developer Tools"
