[package]
name = "quant-cli"
version.workspace = true
edition.workspace = true
description = "Unified CLI for local LLM management - Claude Code-like experience"

[[bin]]
name = "quant"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Local crates
llm-core = { path = "../llm-core" }

# REPL and terminal
rustyline = "14"
crossterm = "0.28"
indicatif = "0.17"

# Async streaming
futures = "0.3"
async-stream = "0.3"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
toml.workspace = true

# Tool framework
async-trait = "0.1"
scraper = "0.19"
ego-tree = "0.6"
url = "2"
which = "6"
regex = "1"
walkdir = "2"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
