[package]
name = "quant-cli"
version.workspace = true
edition.workspace = true
description = "Unified CLI for local LLM management - Claude Code-like experience"

[[bin]]
name = "quant"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
clap_complete = "4"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Local crates
llm-core = { path = "../llm-core" }

# REPL and terminal
rustyline = "14"
crossterm = "0.28"
indicatif = "0.17"

# Async streaming
futures = "0.3"
async-stream = "0.3"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
toml.workspace = true

# Tool framework
async-trait = "0.1"
scraper = "0.19"
ego-tree = "0.6"
url = "2"
which = "6"
regex = "1"
walkdir = "2"
urlencoding = "2"
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"

# MCP Client Support
nix = { version = "0.29", features = ["process", "signal"] }
async-channel = "2"
uuid = { version = "1", features = ["v4"] }

# Smart Context Management
tiktoken-rs = "0.6"
fastembed = { version = "4", optional = true }
dashmap = "6"
parking_lot = "0.12"
sha2 = "0.10"
bincode = "1"
once_cell = "1"

# Hot-reload support
notify = { version = "6", features = ["serde"] }

[features]
default = []
embeddings = ["fastembed"]

[dev-dependencies]
tempfile = "3"
